--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "daisyui": "^4.7.3"
+    "daisyui": "^4.7.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
