--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@spearly/sdk-js": "^2.0.2",
     "astro": "^4.4.15",
     "date-fns": "^3.6.0",
+    "sharp": "^0.33.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   },
